Decorator, update on DataStorage and tests + new JaCoCo report.